<resources>
    <string name="app_name">ScanApp</string>
    <string name="login_user_name">Nombre de Usuario</string>
    <string name="login_password">Ingrese su contraseña</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="search">Buscar</string>
    <string name="more">Mas....</string>
    <string name="scan">Escanear código de barras</string>
    <string name="title_config">Configuración</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_export">Exportar</string>
    <string name="menu_limpiar">Limpiar</string>
    <string name="menu_salir">Cerrar Sesión</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_borrar">Borrar</string>
    <string name="edit_articulo_articulo">Artículo</string>
    <string name="edit_articulo_cabys">Cabys</string>
    <string name="edit_articulo_codbar">Código de Barras</string>
    <string name="edit_articulo_impuesto">Impuesto</string>
    <string name="edit_articulo_cantidad">Cantidad</string>
    <string name="edit_articulo_bodega">Bodega</string>
    <string name="edit_articulo_preciocompra">Precio de Compra</string>
    <string name="edit_articulo_precioventa">Precio de Venta</string>
</resources>