<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search"
        android:title="@string/search"
        app:contentDescription="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/config"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_config"
        app:contentDescription="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/export"
        android:icon="@drawable/ic_baseline_export"
        android:title="@string/menu_export"
        app:contentDescription="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/limpiar"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/menu_limpiar"
        app:contentDescription="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/salir"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="Salir"
        app:contentDescription="Salir"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        app:contentDescription="@string/more"
        app:showAsAction="never"
        />

</menu>